deployments/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-client-tester
  namespace: service-dev
spec:
  serviceAccountName: ksa-api-gateway 
  containers:
  - name: cloud-sql-proxy
    image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
    args:
      - "--structured-logs"
      - "--port=5432"
      - "--private-ip" 
      - "game-item-generation:asia-southeast1:game-item-generation-service-db"
    securityContext:
      runAsNonRoot: true
  - name: postgres-client
    image: postgres:14
    command: ["sleep", "3600"]
