deployments/jaeger-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-agent
  namespace: monitor
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/component: agent-headless
spec:
  clusterIP: None # Headless service
  ports:
    - name: jaeger-compact
      port: 6831
      protocol: UDP
      targetPort: 6831
  selector:
    app.kubernetes.io/component: agent
