deployments/allow-collector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-collector-ingress
  namespace: monitor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: collector
  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: agent
    ports:
    - protocol: TCP
      port: 14250
