deployments/allow-gateway-to-jaeger.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-gateway-to-jaeger-agent
  namespace: service-dev 
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/component: agent 
    ports:
    - protocol: UDP
      port: 6831
